--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -47,7 +47,9 @@
                               <td>
                                 <table>
                                   <tr ng-repeat="orden in lineas.egunak[nireindex].turnoak[0].ordenes" ng-if="checkStatus(lineas.egunak[nireindex].fetxa,nireindex)">
-                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">{{ orden.ref }} {{ orden.of }} 
+                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                        <span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                        <!--<span data-miid="{{ lineas._id }}" editable-text="orden.of"  onbeforesave="updateUser($data, this)">{{ orden.of }}</span>-->
                                     </td>
                                   </tr>
                                 </table>
@@ -55,15 +57,28 @@
                               <td>
                                 <table>
                                   <tr ng-repeat="orden in lineas.egunak[nireindex].turnoak[1].ordenes" ng-if="checkStatus(lineas.egunak[nireindex].fetxa,nireindex)">
-                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">{{ orden.ref }} {{ orden.of }}</td>
+                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                        <span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                        <span data-miid="{{ lineas._id }}" editable-text="orden.of"  onbeforesave="updateUser($data, this)">{{ orden.of }}</span>
+                                    </td>
                                   </tr>
                                 </table>
                               </td>
                               <td>
                                 <table>
-                                  <tr ng-repeat="orden in lineas.egunak[nireindex].turnoak[2].ordenes" ng-if="checkStatus(lineas.egunak[nireindex].fetxa,nireindex)"><td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">{{ orden.ref }} {{ orden.of }}</td></tr>
+                                  <tr ng-repeat="orden in lineas.egunak[nireindex].turnoak[2].ordenes" ng-if="checkStatus(lineas.egunak[nireindex].fetxa,nireindex)">
+                                      <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                          <span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                          <span data-miid="{{ lineas._id }}" editable-text="orden.of"  onbeforesave="updateUser($data, this)">{{ orden.of }}</span>
+                                      </td>
+                                  </tr>
                                 </table>
                               </td>                             
+                          </tr>
+                          <tr>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
                           </tr>
                         </tbody>
                       </table>
