--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -58,7 +58,7 @@
                                 <table>
                                   <tr ng-repeat="orden in lineas.egunak[nireindex].turnoak[1].ordenes" ng-if="checkStatus(lineas.egunak[nireindex].fetxa,nireindex)">
                                     <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
-                                        <span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
+                                        <span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser(orden,$data, this)">{{ orden.ref }}</span>
                                         <span data-miid="{{ lineas._id }}" editable-text="orden.of"  onbeforesave="updateUser($data, this)">{{ orden.of }}</span>
                                     </td>
                                   </tr>
@@ -76,9 +76,9 @@
                               </td>                             
                           </tr>
                           <tr>
-                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
-                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
-                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="updateUser($data, this)">+</span></td></tr></table></td>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="addData($data, this)">+</span></td></tr></table></td>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="addData($data, this)">+</span></td></tr></table></td>
+                              <td><table><tr><td><span data-miid="{{ lineas._id }}" editable-text="orden.ref" onbeforesave="addData($data, this)">+</span></td></tr></table></td>
                           </tr>
                         </tbody>
                       </table>
