Linea parametros pasatzea aldatu behar da.

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -37,10 +37,9 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr >
+                    <tr>
                         <td class="tdlinea">Linea:11</td>
-                        <!--<td data-ng-repeat="nireindex in [0,1,2,3,4,5,6]">-->
-                        <td  ng-repeat="lineas in datuak">
+                        <td ng-repeat="egunak in datuak">
                             <table class="table text-center table-condensed">
                                 <thead>
                                 <th>Mañana</th>
@@ -48,201 +47,88 @@
                                 <th>Noche</th>
                                 </thead>
                                 <tbody>
-                                <tr >
-                                    <td>
-                                        <table>
-                                            <tr ng-repeat="turnos in lineas.turnoak">
-                                                <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
-                                                    <table>
-                                                        <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
-                                                            <td>
-                                                                <span data-miid="{{ lineas._id }}"
-                                                                      data-fetxa="lineas.fetxa"
+                                    <tr>
+                                        <td>
+                                            <table>
+                                                <tr ng-repeat="turnos in egunak.linea1">
+                                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                                        <table>
+                                                            <tbody>
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
+                                                                <td>
+                                                                <span data-miid="{{ egunak._id }}"
+                                                                      data-fetxa="egunak.fetxa"
                                                                       data-turno="1"
-                                                                      data-linea="{{ lineas.linea }}"
+                                                                      data-linea="1"
                                                                       editable-text="orden.ref"
                                                                       onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
-                                                            </td>
-                                                        </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td>
-                                        <table>
-                                            <tr ng-repeat="turnos in lineas.turnoak">
-                                                <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
-                                                    <table>
-                                                        <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
-                                                            <td>
-                                                                <span data-miid="{{ lineas._id }}"
-                                                                      data-fetxa="lineas.fetxa"
+                                                                </td>
+                                                            </tr>
+                                                            <!--<tr><td ng-if="turnos.turno==1">+</td></tr>-->
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                                <tr><td>+++</td></tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table>
+                                                <tr ng-repeat="turnos in egunak.linea1">
+                                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                                        <table>
+                                                            <tbody>
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
+                                                                <td>
+                                                                <span data-miid="{{ egunak._id }}"
+                                                                      data-fetxa="egunak.fetxa"
                                                                       data-turno="2"
-                                                                      data-linea="{{ lineas.linea }}"
+                                                                      data-linea="1"
                                                                       editable-text="orden.ref"
                                                                       onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
-                                                            </td>
-                                                        </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td>
-                                        <table>
-                                            <tr ng-repeat="turnos in lineas.turnoak">
-                                                <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
-                                                    <table>
-                                                        <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
-                                                            <td>
-                                                                <span data-miid="{{ lineas._id }}"
-                                                                      data-fetxa="lineas.fetxa"
+                                                                </td>
+                                                            </tr>
+                                                            <!--<tr><td ng-if="turnos.turno==2">+</td></tr>-->
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                                <tr><td>+++</td></tr>
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table>
+                                                <tr ng-repeat="turnos in egunak.linea1">
+                                                    <td style="background-color: {{ mysettings | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ mysettings | searchByRefForecolor : 'ref' : orden.ref }} !important;">
+                                                        <table>
+                                                            <tbody>
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
+                                                                <td>
+                                                                <span data-miid="{{ egunak._id }}"
+                                                                      data-fetxa="egunak.fetxa"
                                                                       data-turno="3"
-                                                                      data-linea="{{ lineas.linea }}"
+                                                                      data-linea="1"
                                                                       editable-text="orden.ref"
                                                                       onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
-                                                            </td>
-                                                        </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
+                                                                </td>
+                                                            </tr>
+                                                            <!--<tr><td ng-if="turnos.turno==3">+</td></tr>-->
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                                <tr><td>+++</td></tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <tr>
 
-                                </tbody>
-                                <tr>
-                                    <td>
-                                        <table>
-                                            <tr>
-                                                <td><span data-miid="{{ lineas._id }}"
-                                                          data-fetxa="{{nireindex}}"
-                                                          data-turno="1"
-                                                          data-linea="{{ lineas.linea }}"
-                                                          editable-text="orden.ref"
-                                                          onbeforesave="addData($data, this)">+</span></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td>
-                                        <table>
-                                            <tr>
-                                                <td><span data-miid="{{ lineas._id }}"
-                                                          data-fetxa="{{nireindex}}"
-                                                          data-turno="2"
-                                                          data-linea="{{ lineas.linea }}"
-                                                          editable-text="orden.ref"
-                                                          onbeforesave="addData($data, this)">+</span></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td>
-                                        <table>
-                                            <tr>
-                                                <td><span data-miid="{{ lineas._id }}"
-                                                          data-fetxa="{{nireindex}}"
-                                                          data-turno="3"
-                                                          data-linea="{{ lineas.linea }}"
-                                                          editable-text="orden.ref"
-                                                          onbeforesave="addData($data, this)">+</span></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <!-- lineas -->
-                    <tr ng-show="!datuak.length || ((datuak.length)  &&(datuak.linea!=2))">
-                        <td class="tdlinea">Linea:1</td>
-                        <td data-ng-repeat="nireindex in [0,1,2,3,4,5,6]">
-                            <table class="table text-center table-condensed">
-                                <thead>
-                                <th>Mañana</th>
-                                <th>Tarde</th>
-                                <th>Noche</th>
-                                </thead>
-                                <tbody>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-berria="1" data-miid="1" data-fetxa="{{nireindex}}" data-turno="1"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-miid="1" data-fetxa="{{nireindex}}" data-turno="2"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-miid="1" data-fetxa="{{nireindex}}" data-turno="3"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </td>
                     </tr>
-                    <tr ng-show="!datuak.length">
-                        <td class="tdlinea">Linea:2</td>
-                        <td data-ng-repeat="nireindex in [0,1,2,3,4,5,6]">
-                            <table class="table text-center table-condensed">
-                                <thead>
-                                <th>Mañana</th>
-                                <th>Tarde</th>
-                                <th>Noche</th>
-                                </thead>
-                                <tbody>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-miid="2" data-fetxa="{{nireindex}}" data-turno="1"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-miid="2" data-fetxa="{{nireindex}}" data-turno="2"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><span data-miid="2" data-fetxa="{{nireindex}}" data-turno="3"
-                                                      editable-text="orden.ref"
-                                                      onbeforesave="sartu($data, this)">+</span></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
-                    </tbody>
+
                 </table>
 
             </div>
